--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <div class="card-body">
                             <div class="bs-icon-lg bs-icon-rounded bs-icon-secondary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-4 bs-icon" style="background: rgb(36,101,129);"><img src="assets/img/5069156.png" width="51" height="51"></div>
                             <div>
-                                <h4 class="fw-bold">Collabolration</h4>
+                                <h4 class="fw-bold">Collaboration</h4>
                                 <p class="text-muted">Great product are through collaboration. We believe in active collaboration with you,your customers,and other teams to engage in a collaborative product development experience.&nbsp;</p>
                             </div>
                         </div>
