--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <div></div>
                 </div>
                 <div class="col-md-6 order-first order-md-last">
-                    <div><img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="assets/img/R.jpeg"></div>
+                    <div><img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="assets/img/unnamed.jpg"></div>
                 </div>
             </div>
             <div class="row">
